# flaregun

./: Dockerfile  README.md  cronjob.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
