[tool.poetry]
name = "flaregun"
version = "0.1.0"
description = ""
authors = ["Scott Odle <scott@sjodle.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
